fix scrollbar style

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -40,8 +40,9 @@ footer { position:absolute; bottom:0; margin:1em .7em; font-size:.7em; white-spa
 footer a { display:inline; padding:0; }
 
 
-::-webkit-scrollbar { width:.2em; color:rgba(50,50,50,.3); }
+::-webkit-scrollbar { width:.2em; }
 ::-webkit-scrollbar-track-piece { background-color:transparent; }
+::-webkit-scrollbar-thumb { background:rgba(50,50,50,.3); }
 
 ::selection { background-color:rgba(255,255,0,.3); }
 ::-moz-selection { background-color:rgba(255,255,0,.3); }
